welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:15: error: value Yellow is not a member of object java.awt.Color
	setCouleurBrosse(Color.Yellow);
                               ^