welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def growFlower() {
	faireFleur(Color.red);
	avance();
}

def faireFleur(c:Color) {
	setCouleurBrosse(c);
	baisseBrosse();
	avance(2);
	recule();
	gauche();
	avance();
	recule(2);
	avance();
	setCouleurBrosse(Color.Yellow);
	leveBrosse();
}